# C_DSDEMO

./: CMakeLists.txt  README.md  main.c
01 introduction/: Scanf.h  Status.c  Status.h
02_01 SequenceList/: SequenceList-main.c  SequenceList.c  SequenceList.h
02_02 Union/: Union-main.c  Union.c  Union.h
02_03 MergeSqList/: MergeSqList-main.c  MergeSqList.c  MergeSqList.h
02_04 SinglyLinkedList/: SinglyLinkedList-mian.c  SinglyLinkedList.c  SinglyLinkedList.h
02_05 MergeList/: MergeList-main.c  MergeList.c  MergeList.h  TestData_HL.txt
supplementaryExample/: 01 va_start_example.c  02 malloc_demo.c  03struct_demo.c  04union_demo.c  06dlink_demo.c  a.out  helloworld.c  helloworld.i  link_demo.c  typedef_demo.c
